# DisplayVM1

./: platformio.ini
include/: lv_conf.h
src/: main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image4.c  ui_comp_image4.h  ui_comp_label5.c  ui_comp_label5.h  ui_comp_telefono.c  ui_comp_telefono.h
src/ui/fonts/: ui_font_Exo24.c  ui_font_Exo32.c  ui_font_Font1.c
src/ui/images/: ui_img_f600_png.c  ui_img_f617_png.c  ui_img_flecha_izq_png.c  ui_img_telefono_c_png.c  ui_img_telefonomp_png.c  ui_img_vending_png.c
src/ui/screens/: ui_Pantalla.c  ui_Screen1.c  ui_Screen10.c  ui_Screen11.c  ui_Screen12.c  ui_Screen13.c  ui_Screen14.c  ui_Screen15.c  ui_Screen16.c  ui_Screen17.c  ui_Screen18.c  ui_Screen19.c  ui_Screen2.c  ui_Screen20.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c
