SET(SOURCES components/ui_comp_image4.c
    components/ui_comp_label5.c
    components/ui_comp_telefono.c
    components/ui_comp.c
    screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    screens/ui_Screen4.c
    screens/ui_Screen5.c
    screens/ui_Screen6.c
    screens/ui_Screen7.c
    screens/ui_Screen8.c
    screens/ui_Screen9.c
    screens/ui_Screen10.c
    screens/ui_Screen11.c
    screens/ui_Screen12.c
    screens/ui_Screen13.c
    screens/ui_Screen14.c
    screens/ui_Screen15.c
    screens/ui_Screen16.c
    screens/ui_Screen17.c
    screens/ui_Screen18.c
    screens/ui_Screen19.c
    screens/ui_Screen20.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_telefono_c_png.c
    images/ui_img_flecha_izq_png.c
    images/ui_img_telefonomp_png.c
    images/ui_img_vending_png.c
    images/ui_img_f600_png.c
    images/ui_img_f617_png.c
    fonts/ui_font_Exo24.c
    fonts/ui_font_Exo32.c
    fonts/ui_font_Font1.c)

add_library(ui ${SOURCES})
